# tea

./: Cargo.toml  justfile
src/: app.rs  args.rs  compositor.rs  lib.rs  main.rs  stats.rs
